# sc2bot

./: CMakeLists.txt  LICENSE  README.md
include/: BotBase.h  FoundationBuilding.h  StrategyBase.h  SuggestedAction.h  ZergBot.h  bot.h  foundation_building.h
src/: CMakeLists.txt  FoundationBuilding.cpp  ZergBot.cpp  bot.cpp  foundation_building.cpp  main.cpp
src/Bots/: ZergBot.cpp
src/Strategies/Zerg/: ManageEconomy.cpp  ManageQueens.cpp  ManageStructures.cpp
src/common/: common.cpp  common.h
